[tool.poetry]
name = "tello-ml-python"
version = "0.1.0"
description = ""
authors = ["James Williams <james.williams@packetgeek.net>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
python-socketio = "^5.8.0"

[tool.poetry.dev-dependencies]
invoke = "^2.1.1"
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
